Fixes cards size gaps

--- a/src/components/search-result/searchResultStyle.css
+++ b/src/components/search-result/searchResultStyle.css
@@ -17,7 +17,7 @@
 
 .current-weather-container {
   background-color: #4ed682;
-  width: 300px;
+  width: 350px;
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -25,7 +25,7 @@
   border-radius: 0.25rem;
   color: white;
   font-size: 1.2rem;
-  gap: 0.5rem;
+  gap: 1.5rem;
   box-shadow: 0 6px 8px rgba(0, 0, 0, 0.1), 0 3px 5px rgba(0, 0, 0, 0.1);
   height: fit-content;
 }
@@ -83,7 +83,7 @@
   flex-wrap: wrap;
   width: 65%;
   justify-content: center;
-  gap: 1rem;
+  gap: 1.5rem;
 }
 
 .weather-card {
